[PRACHITOSH] ADDED : redis implementation for notes.
