# FundooNote/src/routes/user.route.js
@@ -1,13 +1,13 @@
 import express from 'express';
 import * as userController from '../controllers/user.controller';
 import { registerUserValidator , loginUserValidator, forgotPasswordValidator} from '../validators/user.validator';
-import { userAuth , userForgotAuth } from '../middlewares/auth.middleware';
+import { userAuth } from '../middlewares/auth.middleware';
 
 const router = express.Router();
 
 
 //route to create a new user
-router.post('', registerUserValidator, userController.registerUser);
+router.post('/register', registerUserValidator, userController.registerUser);
 
 //route to login for users
 router.post('/login', loginUserValidator, userController.loginUser);
@@ -16,6 +16,6 @@ router.post('/login', loginUserValidator, userController.loginUser);
 router.post('/forgotpassword', forgotPasswordValidator , userController.forgotPassword);
 
 //route for user reset password
-router.post('/:token/resetpassword', userForgotAuth,  userController.resetPassword);
+router.put('/:token/resetpassword',  userController.resetPassword);
 
 export default router;
